--- a/src/main/resources/templates/history/sale.html
+++ b/src/main/resources/templates/history/sale.html
@@ -22,8 +22,8 @@
 						<tr>
 							<th th:text="${order.date}"></th>
 							<td th:text="${order.gatherer.firstName}"></td>
-							<td><a th:href="@{'/history/sale/' + ${gathererorder.id}+'/view'}" class="btn btn-success" >More details</a></td>
-							<td><a href="#" class="btn btn-success" >Qualify</a></td>
+							<td><a th:href="@{'/history/sale/' + ${order.id}+'/view'}" class="btn btn-success" >More details</a></td>
+							<td><a th:href="@{'/qualify/gatherer/' + ${order.id}}" class="btn btn-success" >Qualify</a></td>
 						</tr>
 					</tbody>
 				</table>
