--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -55,7 +55,7 @@
 									<li><a class="dropdown-item" href="/history/purchase">Purchase History</a></li>
 									<li><a class="dropdown-item" href="#">Requests History</a></li>
 								</ul></li>
-							<li class="nav-item"><a class="nav-link active" href="#"
+							<li class="nav-item"><a class="nav-link active" href="/recharge"
 								tabindex="-1">Recharge</a></li>
 							<li class="nav-item"><a class="nav-link active" href="/rewards"
 								tabindex="-1" aria-disabled="true">Rewards</a></li>
