--- a/src/main/resources/templates/history/purchase.html
+++ b/src/main/resources/templates/history/purchase.html
@@ -10,7 +10,7 @@
 		<div class="d-flex justify-content-center table-responsive">
 			<div>
 				<table class="table m-3 p-2 table-hover">
-					<thead style="background-color: #4EB918">
+					<thead class="bg-success text-white">
 						<tr class="text-center">
 							<th scope="col" >Date</th>
 							<th scope="col" >Recycler</th>
