--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -52,8 +52,8 @@
 								id="navbarDropdown" role="button" data-bs-toggle="dropdown"
 								aria-expanded="false"> Movements History </a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<li sec:authorize="hasRole('ROLE_GATHERER')"><a class="dropdown-item" href="/history/sale">Sale History</a></li>
-									<li sec:authorize="hasRole('ROLE_RECYCLER')"><a class="dropdown-item" href="/history/purchase">Purchase History</a></li>
+									<li sec:authorize="hasRole('ROLE_RECYCLER')"><a class="dropdown-item" href="/history/sale">Sale History</a></li>
+									<li sec:authorize="hasRole('ROLE_GATHERER')"><a class="dropdown-item" href="/history/purchase">Purchase History</a></li>
 									<li sec:authorize="hasRole('ROLE_GATHERER')"><a class="dropdown-item" href="#">Requests History</a></li>
 								</ul>
 							</li>
