FRONT AND BACK: REQUEST CONTROLLER,REQUESTRECYCLERSSERVICE GAA

--- a/src/main/resources/templates/request/view.html
+++ b/src/main/resources/templates/request/view.html
@@ -20,7 +20,7 @@
 
 							</tr>
 						</thead>
-						<tbody th:each="wasteOrder : ${wasteOrdersEmpty}">
+						<tbody th:each="wasteOrder : ${wasteOrders}">
 							<tr>
 								<th th:text="${wasteOrder.waste.name}"></th>
 								<td th:text="${wasteOrder.price}" class="text-center"></td>
