--- a/src/main/resources/templates/request/list.html
+++ b/src/main/resources/templates/request/list.html
@@ -16,7 +16,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="order : ${ordersEmpty}">
+					<tr th:each="order : ${orders}">
 						<td class="text-center" th:text="${order.recycler.id}"></td>
 						<td class="text-center"
 							th:text="${order.recycler.firstName}+' '+ ${order.recycler.lastName}"></td>
