--- a/src/main/resources/templates/history/viewPurchase.html
+++ b/src/main/resources/templates/history/viewPurchase.html
@@ -6,52 +6,43 @@
 <body>
 	<header th:replace="layout/layout :: header"></header>
 	<main>
+<section style="margin: 20px;">
+ 	<nav aria-label="breadcrumb">
+	  <ol class="breadcrumb">
+	    <li class="breadcrumb-item"><a href="#">Home</a></li>
+	    <li class="breadcrumb-item"><a href="#">Movements</a></li>
+	    <li class="breadcrumb-item"><a href="#">Purchase History</a></li>
+	    <li class="breadcrumb-item active" aria-current="page">Details</li>
+	  </ol>
+	</nav>
+ </section>
+ 
 
 
-		<div class="d-flex justify-content-center">
-			<div class="row">
-				<div class="col-3 p-1">
-					<div class="card" style="width: 30rem;">
-						<div style="background-color: #4EB918">
-							<h3 class="text-center">Purchase Details</h3>
+		<section style="margin: 25px;">
+			<div class="row" >
+				<div th:each="listWasteOrder : ${listWasteOrders}" class="col-sm-3" style="padding: 5px;">
+					<div class="card" style="width: 18rem;">
+						<div class="card-header">
+						<h5 class="card-title" align="center">Category: <span th:text="${listWasteOrder.waste.category.name}"></span></h5>
 						</div>
+						<img th:src="${listWasteOrder.waste.image}" >
 						<div class="card-body">
-							<table class="table table-borderless">
-								<thead>
-									<tr class="text-center">
-										<th scope="col">Waste</th>
-										<th scope="col">Price/Kilo</th>
-										
-									</tr>
-								</thead>
-								<tbody th:each="listWasteOrder : ${listWasteOrders}">
-									<tr>
-										<th th:text="${listWasteOrder.waste.name}"></th>
-										<td th:text="${listWasteOrder.waste.category.priceKilo}" class="text-center"></td>
-									
-									</tr>
-								</tbody>
-								
-							</table>
 							
-							
-							<div>
-								<h5 class="text-center">
-									Total Price: <span
-										th:text="${optional.totalAmount}"></span>
-								</h5>
-								<h5 class="text-center">
-									Date: <span
-										th:text="${optional.date}"></span>
-								</h5>
-							</div>
-							
+							<p class="card-text"><strong>Waste: </strong><span th:text="${listWasteOrder.waste.name}"></span><br>
+							<strong>Price/Kilo: </strong><span th:text="${listWasteOrder.waste.category.priceKilo}"></span>
+							</p>
 						</div>
 					</div>
 				</div>
-
 			</div>
-		</div>
+		</section>
+		
+		
+
+
+
+
 
 	</main>
 
