--- a/src/main/resources/templates/qualify/recycler.html
+++ b/src/main/resources/templates/qualify/recycler.html
@@ -6,13 +6,25 @@
 <body>
 	<header th:replace="layout/layout :: header"></header>
 	<main>
-		<section style="padding: 30px;" class="content-center">
-
-			<div class="card mb-5 justify-content-center " style="width: 600px;">
-				<div class="row g-0">
-					<div class="col-md-5 justify-content-center p-2">
+	
+	
+	<section style="margin: 20px;">
+ 	<nav aria-label="breadcrumb">
+	  <ol class="breadcrumb">
+	    <li class="breadcrumb-item"><a href="#">Home</a></li>
+	    <li class="breadcrumb-item"><a href="#">Movements</a></li>
+	    <li class="breadcrumb-item"><a href="#">Purchase History</a></li>
+	    <li class="breadcrumb-item active" aria-current="page">Qualify</li>
+	  </ol>
+	</nav>
+ </section>
+	
+		<section class="d-flex justify-content-center m-4">
+			<div  class="card">
+				<div class="row" >
+					<div class="col-md-5  p-2">
 						<img th:src="${recycler.image}"
-							class="img-fluid img-thumbnail rounded-circle border-success"
+							class="img-thumbnail rounded-circle mx-2 my-2" align="middle"
 							width="400px;" height="400px;">
 					</div>
 					<div class="col-md-7">
@@ -24,6 +36,12 @@
 							</p>
 							<p class="card-text">
 								<strong>Last Name:</strong> <span th:text="${recycler.lastName}"></span>.
+							</p>
+							<p class="card-text">
+								<strong>Calification:</strong> <span th:text="${recycler.calification}"></span>
+							</p>
+							<p class="card-text">
+								<strong>Mobile Number:</strong> <span th:text="${recycler.mobileNumber}"></span>
 							</p>
 							<form th:action="@{/qualify/recycler/save}"
 								th:object="${recycler}" method="post">
@@ -50,7 +68,7 @@
 
 								</select>
 								<div class="d-flex justify-content-center table-responsive my-4">
-									<button type="submit" class="btn btn-success">save</button>
+									<button type="submit" class="btn btn-success" >save</button>
 								</div>
 							</form>
 
