--- a/src/main/resources/templates/qualify/gatherer.html
+++ b/src/main/resources/templates/qualify/gatherer.html
@@ -10,8 +10,8 @@
  
  	<div class="card mb-5 justify-content-center "  style="width: 600px;" >
 	  <div class="row g-0">
-	    <div class="col-md-5 justify-content-center p-2">
-	      <img th:src="${gatherer.image}" class="img-fluid img-thumbnail rounded-circle border-success" width="400px;"  height="400px;">
+	    <div class="col-ma-3 justify-content-center p-2">
+	      <img th:src="${gatherer.image}" class="img-fluid img-thumbnail rounded-circle border-success " width="400px;"  height="400px;">
 	    </div>
 	    <div class="col-md-7">
 	      <div class="card-body">
