--- a/src/main/resources/templates/history/viewSale.html
+++ b/src/main/resources/templates/history/viewSale.html
@@ -7,49 +7,36 @@
 	<header th:replace="layout/layout :: header"></header>
 	<main>
 
+			<section style="margin: 25px;"  >
+			<div class="row"  >
+				<div th:each="waste : ${waste1}" class="col-sm-3" 
+					style="width: 21.5em;margin:0 auto;">
 
-		<div class="d-flex justify-content-center">
-			<div class="row">
-				<div class="col-3 p-1">
-					<div class="card" style="width: 30rem;">
-						<div style="background-color: #4EB918">
-							<h3 class="text-center">Sale Details</h3>
-						</div>
+					<div class="card" style="background-color: #93e36b" >
+
 						<div class="card-body">
-							<table class="table table-borderless">
-								<thead>
-									<tr class="text-center">
-										<th scope="col">Waste</th>
-										<th scope="col">Price/Kilo</th>
-										
-									</tr>
-								</thead>
-								<tbody th:each="waste : ${waste1}">
-									<tr>
-										<th th:text="${waste.name}"></th>
-										<td th:text="${waste.category.priceKilo}" class="text-center"></td>
-									
-									</tr>
-								</tbody>
-								
-							</table>
-							<div>
-								<h5 class="text-center">
-									Total Price: <span
-										th:text="${optional.totalAmount}"></span>
-								</h5>
-								<h5 class="text-center">
-									Date: <span
-										th:text="${optional.date}"></span>
-								</h5>
-							</div>
+	
+							<h5 class="card-title-success" align="center">
+								Sale Details
+							</h5>
+
+							<p class="card-text">
+								Waste : <span th:text="${waste.name}"> </span>
+							</p>
+							<p class="card-text">
+								Price per Kilo : <span th:text="${waste.category.priceKilo}"> </span>
+							</p>
 							
+						
 						</div>
 					</div>
 				</div>
-
 			</div>
-		</div>
+			</section>
+
+
+
+		
 
 	</main>
 
