--- a/src/main/resources/templates/qualify/gatherer.html
+++ b/src/main/resources/templates/qualify/gatherer.html
@@ -8,16 +8,24 @@
 	<main>
 		 <section style="padding: 30px;" class="content-center">
  
- 	<div class="card mb-5 justify-content-center "  style="width: 600px;" >
-	  <div class="row g-0">
-	    <div class="col-ma-3 justify-content-center p-2">
+ 	<div class="card mb-5 justify-content-center "  style="width: 21.5em;margin:0 auto;background-color: #fafafa"  >
+	  <div class="row g-0" >
+	    <div class="col-ma-3 justify-content-center p-2" >
 	      <img th:src="${gatherer.image}" class="img-fluid img-thumbnail rounded-circle border-success " width="400px;"  height="400px;">
 	    </div>
-	    <div class="col-md-7">
+	    <div class="col-md-7" style="width:100%"  >
 	      <div class="card-body">
-	        
-	        <p class="card-text"><strong>First Name:</strong> <span th:text="${gatherer.firstName}"></span>.</p>
-	        <p class="card-text"><strong>Last Name:</strong> <span th:text="${gatherer.lastName}"></span>.</p>
+	        <p style="margin:auto; text-align:center">
+	        <strong>First Name:</strong>
+	         <span th:text="${gatherer.firstName}"></span>
+	         </p>
+	        <p style="margin:auto; text-align:center">
+	        <strong>Last Name:</strong> 
+	        <span th:text="${gatherer.lastName}"></span>
+	        <p>
+	        <p style="margin:auto; text-align:center">
+	        <strong>Selecciona una calificacion</strong>
+	        </p>
 			<form th:action="@{/qualify/gatherer/save}" th:object="${gatherer}" method="post">
 								<input type="hidden" th:field="*{id}"> 
 								<input type="hidden" th:field="*{firstName}"> 
@@ -32,8 +40,10 @@
 								<input type="hidden" th:field="*{orders}">
 								<input type="hidden" th:field="*{address}">
 								<input type="hidden" th:field="*{calification}">
-								<select th:field="*{points}">
-								<option th:each="point : ${lpoints}" th:value="${point}" th:text="${point}"></option>
+								<div style="margin:auto; text-align:center">
+								<select th:field="*{points}" > 
+								</div>
+								<option th:each="point : ${lpoints}" th:value="${point}" th:text="${point}" ></option>
 								
 								</select>      
 								<div class="d-flex justify-content-center table-responsive my-4">
