--- a/src/main/resources/templates/coupons/list.html
+++ b/src/main/resources/templates/coupons/list.html
@@ -25,6 +25,14 @@
 			
 		</div>
 		
+		<div  class="d-flex justify-content-center">
+			<div class="alert alert-success alert-dismissible fade show p-3 m-3"
+				th:if="${message != null}" role="alert">
+				<i class="fas fa-check-circle"></i> <label
+					th:text=${message}></label>
+			</div>
+		</div>
+		
 		<div class="d-flex justify-content-center m-3">
 			<div>
 				<table class="table m-3 p-2 table-hover" >
