--- a/src/main/resources/templates/coupons/view.html
+++ b/src/main/resources/templates/coupons/view.html
@@ -6,6 +6,16 @@
 <body>
 	<header th:replace="layout/layout :: header"></header>
 	<main>
+
+		<div  class="d-flex justify-content-center">
+			<div class="alert alert-danger alert-dismissible fade show p-3 m-3"
+				th:if="${message != null}" role="alert">
+				<i class="fas fa-exclamation-triangle"></i> <label
+					th:text=${message}></label>
+			</div>
+		</div>
+
+
 		<div class="d-flex justify-content-center m-3 p-2">
 			<div class="card" style="width: 25rem;">
 				<img th:src="${coupon.image}" class="card-img-top">
