--- a/src/main/resources/templates/recycle/gatherers.html
+++ b/src/main/resources/templates/recycle/gatherers.html
@@ -6,33 +6,46 @@
 <body>
 	<header th:replace="layout/layout :: header"></header>
 	<main>
-
-		<div class="d-flex justify-content-evenly p-3 m-3">
-			<a th:href="@{'/recycle/gatherers/best'}" class="btn btn-secondary">Best gatherers</a> 
-			<a th:href="@{'/recycle/gatherers/byDistrict'}" class="btn btn-secondary">Located in your district</a>
-			<a th:href="@{'/recycle/gatherers'}" class="btn btn-secondary">All gatherers</a>
+<div  class="d-flex justify-content-center">
+			<div class="alert alert-success alert-dismissible fade show p-3 m-3"
+				th:if="${aea != null}" role="alert">
+				<i class="fas fa-check-circle"></i> <label
+					th:text=${aea}></label>
+			</div>
 		</div>
+		<div class="d-flex justify-content-evenly p-3 m-3">
+			<a th:href="@{'/recycle/gatherers/best'}" class="btn btn-secondary">Best
+				gatherers</a> <a th:href="@{'/recycle/gatherers/byDistrict'}"
+				class="btn btn-secondary">Located in your district</a> <a
+				th:href="@{'/recycle/gatherers'}" class="btn btn-secondary">All
+				gatherers</a>
+		</div>
+		
+		
+		
+		
 		<div class="container p-2">
 			<div class="row">
-			  <div class="col-3 p-1" th:each="gatherer : ${gatherers}">
-				<div class="card" style="width: 18rem;">
-					<img th:src="${gatherer.image}" class="img-fluid" >
-					<hr>
-					<div class="card-body">
-					  <h5 class="card-title text-center" th:text="${gatherer.firstName} + ' ' + ${gatherer.lastName}"></h5>
-					 
-					 <div class="button d-flex justify-content-center p-2">
-						<a th:href="@{'/recycle/gatherers/' + ${gatherer.id} + '/view'}"  type="submit" class="btn btn-primary bg-success">Profile</a>
-					 </div> 
-					 			  
+				<div class="col-3 p-1" th:each="gatherer : ${gatherers}">
+					<div class="card" style="width: 18rem;">
+						<img th:src="${gatherer.image}" class="img-fluid">
+						<hr>
+						<div class="card-body">
+							<h5 class="card-title text-center"
+								th:text="${gatherer.firstName} + ' ' + ${gatherer.lastName}"></h5>
+
+							<div class="button d-flex justify-content-center p-2">
+								<a th:href="@{'/recycle/gatherers/' + ${gatherer.id} + '/view'}"
+									type="submit" class="btn btn-primary bg-success">Profile</a>
+							</div>
+						</div>
 					</div>
 				</div>
-			  </div>
-			  
-			</div>	
+
+			</div>
 		</div>
 
-	
+
 	</main>
 	
 	<footer th:replace="layout/layout :: footer"></footer>
