--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -9,7 +9,7 @@
 		gtag('js', new Date());
 		gtag('config', 'G-6SMZME5BC6');
 	</script>
-	<title>Sign In</title>
+	<title>Sign up</title>
 	<link rel="shortcut icon" href="/images/logo.png">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
