--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -6,51 +6,30 @@
 </head>
 <header th:replace="layout/layout :: header"></header>
 <main>
-	<section class="container">
+	<section style="padding: 30px;">
+		<div class="card mb-5" style="max-width: 740px;" >
 		
-		<div class="card mt-5" >
-			<div class="card-header "><h5> <i class="fas fa-address-card"></i> Profile</h5></div>
-			<div class="card-body ">
-				<h5 class="card-title">User Detail (Frontend: sec:authentication): </h5>
-				<p class="card-text">Username: <span sec:authentication="name"></span> </p>
-				<p class="card-text">Authorities: <span sec:authentication="principal.authorities"></span> </p>
-				<h5 class="card-title">Principal Details (Frontend: authentication.getPrincipal()): </h5>
-				<p class="card-text">
-					Segmento: <span th:text="${#authentication.getPrincipal().getSegment()}"></span> 
-				</p>
-				<p class="card-text">
-					Id del Segmento: <span th:text="${#authentication.getPrincipal().getIdSegment()}"></span> 
-				</p>
-				
-				<div th:switch="${segment}">					
+				<div th:switch="${segment}">
 					<div th:case="'GATHERER'">
-						<h5 class="card-title">Gatherer Details (Backend: Model): </h5>
-						<p class="card-text">
-							Full name: 
-							<span th:text="${gatherer.lastName}"></span>, <span th:text="${gatherer.firstName}"></span>
-						</p>
-						<p class="card-text">
-							DNI: 
-							<span th:text="${gatherer.dni}"></span>
-						</p>
-						<p class="card-text">
-							Mobile Number: 
-							<span th:text="${gatherer.mobileNumber}"></span>
-						</p>
-						<p class="card-text">
-							Email: 
-							<span th:text="${gatherer.email}"></span>
-						</p><p class="card-text">
-							Address: 
-							<span th:text="${gatherer.address}"></span>
-						</p>
-						<p class="card-text">
-							DateBirth: 
-							<span th:text="${gatherer.dateBirth}"></span>
-						</p>
+					<div class="row g-0">
+						<div class="col-md-5"> <img th:src="${gatherer.image}" width="300px;" height="400;"
+							alt="...">
+						</div>
+						<div class="col-md-7">
+	      					<div class="card-body">
+									<h5 class="card-title">Gatherer Details: </h5>
+									<p class="card-text"> <strong>Full name:</strong><span th:text="${gatherer.lastName}"></span>, <span th:text="${gatherer.firstName}"></span><br>
+									<strong>DNI:</strong><span th:text="${gatherer.dni}"></span><br>
+									<strong>Mobile Number:</strong><span th:text="${gatherer.mobileNumber}"></span><br>
+									<strong>Email:</strong><span th:text="${gatherer.email}"></span><br>
+									<strong>Address:</strong><span th:text="${gatherer.address}"></span><br>
+									<strong>DateBirth:</strong><span th:text="${gatherer.dateBirth}"></span>
+									</p>
+							</div>
+						</div>
 					</div>
 					<div th:case="'RECYCLER'">
-						<h5 class="card-title">Recycler Details (Backend: Model): </h5>
+						<h5 class="card-title">Recycler Details: </h5>
 						<p class="card-text">
 							Full Name: 
 							<span th:text="${recycler.lastName}"></span>, <span th:text="${recycler.firstName}"></span>
@@ -75,8 +54,8 @@
 							<span th:text="${recycler.dateBirth}"></span>
 						</p>
 					</div>
+					
 				</div>
-				
 			</div>
 		</div>
 		
