--- a/src/main/resources/templates/profile/recyclerEdit.html
+++ b/src/main/resources/templates/profile/recyclerEdit.html
@@ -45,7 +45,7 @@
 							</div>
 						</div>
 					<div class="d-flex justify-content-center">
-					 	<a th:href="@{'/profile/gathererEdit'}" class="btn btn-success">Edit Profile</a>
+					 	<a th:href="@{'/profile/' + ${gatherer.user.id} + '/edit'}" class="btn btn-success">Edit Profile</a>
 					</div>
 
 				</div>
