Edit Gatherer and Recycler

--- a/src/main/resources/templates/profile/gathererEdit.html
+++ b/src/main/resources/templates/profile/gathererEdit.html
@@ -15,16 +15,26 @@
 						
 	      				<div class="card-body">
 	      					<div class="row gx-1" >
-	      						<div class="col-md-5">
+	      						<div class="col-md-5"><br>
 									<p class="card-text"> 
-										<strong> Full name:</strong><br>
-										<strong> DNI:</strong><br>
+										<strong> First Name:</strong><br>
+									</p>
+									<p class="card-text">
+										<strong> Last Name:</strong><br>
+									</p>
+									<p class="card-text">
+										<strong> DNI:</strong>
+									</p>
+									<p class="card-text">
 										<strong> Mobile Number:</strong><br>
+									</p>
+									<p class="card-text">
 										<strong> Email:</strong><br>
+									</p>
+									<p class="card-text">
 										<strong> Address:</strong><br>
+									</p>
 										<strong> DateBirth:</strong>
-										<strong> Qualification:</strong>
-									</p >
 								</div>
 								<div class="col-md-7">
 							<p class="card-text">
@@ -33,9 +43,9 @@
 									<div class="mb-3">
 								    <input type="hidden" class="form-control" th:field="*{id}" aria-describedby="nameHelp">			    
 								    <input type="text" class="form-control" th:field="*{firstName}" aria-describedby="nameHelp">	
-								    <input type="text" class="form-control" th:field="*{lastName}" aria-describedby="nameHelp">	
+								    <input type="text" class="form-control" th:field="*{lastName}" aria-describedby="nameHelp">
 								    <input type="text" class="form-control" th:field="*{dni}" aria-describedby="nameHelp">	
-								    <input type="text" class="form-control" th:field="*{mobileNumber}" aria-describedby="nameHelp">	
+								    <input type="text" class="form-control" th:field="*{mobileNumber}" aria-describedby="nameHelp">
 								    <input type="text" class="form-control" th:field="*{email}" aria-describedby="nameHelp">	
 								    <input type="text" class="form-control" th:field="*{address}" aria-describedby="nameHelp">	
 								    <input type="date" class="form-control" th:field="*{dateBirth}" aria-describedby="nameHelp">	
